fix: fix layout bug in Edge

--- a/angular/src/app/geolocation/geolocation.component.scss
+++ b/angular/src/app/geolocation/geolocation.component.scss
@@ -1,6 +1,6 @@
 div.flex-container-wrap {
     margin-bottom: 0.1em;
-    align-items: baseline;
+    align-items: center;
 }
 
 app-place-select {
